fix collapsing (well, extending in this case) margin on /contact page
Issue: h1 top margin was extending out of its parent (article), pushing the article down

Fix: simple, follow CSS guides' Mastering margin collapsing, googled, but actually, Dash returned it right away!: add a 1px padding to the parent.

--- a/app/assets/stylesheets/rhouse2.scss
+++ b/app/assets/stylesheets/rhouse2.scss
@@ -69,7 +69,7 @@ main {
 
 .container {
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 1px 2rem;
 }
 
 main .container {
